--- a/src/assets/utils/variables.scss
+++ b/src/assets/utils/variables.scss
@@ -1,6 +1,3 @@
-.test {
-    background-color: red;
-    h1 {
-        color: blue;
-    }
-}
+$main-color: #020203;
+$second-color: #E60000;
+$white-color: white;
