--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,4 +1,7 @@
 @import '../utils/global.scss';
 @import '../utils/variables.scss';
 
+@import '../../pages/Home/index.scss';
+
 @import '../../components/Navbar/index.scss';
+@import '../../components/Asidebar/index.scss';
