--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -3,7 +3,7 @@ nav {
     display: flex;
     background-color: $main-color;
     align-items: center;
-    height: 75px;
+    height: 10vh;
     .nav__wrapper--img {
         width: 15%;
         margin-left: 1%;
@@ -15,17 +15,13 @@ nav {
     .nav__wrapper--navlink {
         width: 75%;
         margin-right: 5%;
-    }
-
-    ul {
-        width: 100%;
-        // background-color: red;
         list-style: none;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        li {
-            color: $white-color;
-        }
+            li {
+                color: $white-color;
+            }
     }
+
 }
