--- a/src/components/Asidebar/index.scss
+++ b/src/components/Asidebar/index.scss
@@ -1,5 +1,32 @@
 aside {
     height: 90vh;
-    background-color: red;
+    background-color: $main-color;
     width: 5vw;
+    position: relative;
+
+    .aside__wrapper {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        img {
+            height: 50px;
+            width: 50px;
+        }
+    }
+    small {
+        background-color: red;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        font-size: 10px;
+        color: $white-color;
+        // transform: rotate(-90deg);
+    }
 }
