--- a/src/assets/utils/global.scss
+++ b/src/assets/utils/global.scss
@@ -6,7 +6,7 @@
 }
 
 html, body {
-    overflow-x: hidden; /* Empêche le débordement horizontal */
+    overflow-x: hidden;
 }
 body {
     margin: 0;
