add props and style component StaticalCard

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -3,5 +3,7 @@
 
 @import '../../pages/Home/index.scss';
 
+/* Components*/
+@import '../../components/StaticalCard/index.scss';
 @import '../../components/Navbar/index.scss';
 @import '../../components/Asidebar/index.scss';
