Create Componant banner

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -5,5 +5,6 @@
 
 /* Components*/
 @import '../../components/StaticalCard/index.scss';
+@import '../../components/Banner/index.scss';
 @import '../../components/Navbar/index.scss';
 @import '../../components/Asidebar/index.scss';
