--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -8,3 +8,6 @@
 @import '../../components/Banner/index.scss';
 @import '../../components/Navbar/index.scss';
 @import '../../components/Asidebar/index.scss';
+
+/**/
+@import '../../components/Chart/BartChart/index.scss'
