--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -4,6 +4,9 @@
     width: 100vw;
 
     &__wrapper {
+        display: flex;
+        flex-direction: column;
+
         &--statistics {
             display: flex;
             width: 90%;
@@ -11,6 +14,12 @@
             .home__chart {
                 width: 80%;
                 height: 200px;
+                &__container {
+                    display: flex;
+                    justify-content: space-between;
+                    gap: 20px;
+                }
+                
             }
         }
     }
