add style lineChart

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -10,4 +10,5 @@
 @import '../../components/Asidebar/index.scss';
 
 /**/
-@import '../../components/Chart/BartChart/index.scss'
+@import '../../components/Chart/BartChart/index.scss';
+@import '../../components/Chart/AreaChart/index.scss';
