--- a/src/components/Chart/AreaChart/index.scss
+++ b/src/components/Chart/AreaChart/index.scss
@@ -1,12 +1,12 @@
 .recharts-legend-item-text {
     position: absolute;
     height: 36px;
-    left: 30px;
-    top: -179px;
+    left: 50px;
+    top: -240px;
     color: #FFFFFF;
     opacity: 0.7;
     font-family: Roboto;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 500;
     line-height: 24px;
     z-index: 0;
@@ -20,7 +20,7 @@
     left: 20px;
     margin-right: 20px;
     margin-left: 20px;
-    top: 0;
+    top: -25px;
     color: #FFFFFF;
     opacity: 0.7;
     font-family: Roboto;
@@ -38,18 +38,17 @@
 .recharts-surface {
     border-radius: 10px;
 }
-
-.chart-container {
-    position: relative; /* Position relative pour le conteneur principal */
-    width: 300px; /* Ajustez la largeur selon vos besoins */
-    height: 300px; /* Ajustez la hauteur selon vos besoins */
+.payload--arechart {
+    padding: 10px;
+    background-color: white;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 600;
 }
 
-.x-axis-container {
-    position: absolute;
-    bottom: 0; /* Positionné au bas du conteneur */
-    left: 0; /* Aligné à gauche du conteneur */
-    width: 100%; /* Largeur du conteneur */
-    height: 36px; /* Hauteur de l'axe X */
-    pointer-events: none; /* Pour que l'axe X ne capture pas les événements de souris */
+.payload--arechart {
+    top: -100px;
 }
