--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -13,3 +13,4 @@
 @import '../../components/Chart/BartChart/index.scss';
 @import '../../components/Chart/AreaChart/index.scss';
 @import '../../components/Chart/RadarChart/index.scss';
+@import '../../components/Chart/PieChart/index.scss';
