--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -2,6 +2,8 @@
     display: flex;
     height: 90vh;
     width: 100vw;
+    padding-top: 10vh;
+    padding-left: 5vw;;
 
     &__wrapper {
         display: flex;
