--- a/src/components/Asidebar/index.scss
+++ b/src/components/Asidebar/index.scss
@@ -13,19 +13,21 @@ aside {
         justify-content: center;
         gap: 20px;
         img {
-            height: 50px;
-            width: 50px;
+            height: 40px;
+            width: 40px;
         }
     }
     small {
-        background-color: red;
-        width: 130px;
         position: absolute;
-        bottom: 23%;
-        left: -30px;
-        transform: rotate(-90deg) translateX(-50%);
-        font-size: 10px;
-        color: $white-color;
+        top: 85%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(-90deg);
+        width: max-content;
+        margin: 0;
+        color: #ffffff;
+        font-family: 'Roboto';
+        font-size: 0.75rem;
+        font-weight: 500;
         text-align: center;
     }
 
